White space bug fix

--- a/public/style/dashboard.css
+++ b/public/style/dashboard.css
@@ -1,3 +1,15 @@
+html,
+body,
+header,
+#intro{
+    height: 100%;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
+
 .head{
     background: url("../img/bg2.png") no-repeat center center fixed;
     -webkit-background-size: cover;
