--- a/public/style/login.css
+++ b/public/style/login.css
@@ -3,6 +3,10 @@ body,
 header,
 #intro{
     height: 100%;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 
